Arregla resto de problemas de sphinx-lint
Signed-off-by: Rodrigo Tobar <rtobar@icrar.org>

--- a/c-api/init.po
+++ b/c-api/init.po
@@ -990,10 +990,10 @@ msgstr ""
 "esto se forma a partir del nombre \"oficial\" del sistema operativo, "
 "convertido a minúsculas, seguido del número de revisión principal; por "
 "ejemplo, para Solaris 2.x, que también se conoce como SunOS 5.x, el valor es "
-"``'sunos5'``. En macOS, es `` 'darwin'``. En Windows, es ``'win'``. La "
-"cadena de caracteres retornada apunta al almacenamiento estático; la persona "
-"que llama no debe modificar su valor. El valor está disponible para el "
-"código de Python como ``sys.platform``."
+"``'sunos5'``. En macOS, es ``'darwin'``. En Windows, es ``'win'``. La cadena "
+"de caracteres retornada apunta al almacenamiento estático; la persona que "
+"llama no debe modificar su valor. El valor está disponible para el código de "
+"Python como ``sys.platform``."
 
 #: ../Doc/c-api/init.rst:574
 msgid ""
@@ -1117,7 +1117,7 @@ msgstr ""
 "para otros fines que no sean ejecutar una sola secuencia de comandos "
 "(*script*) pasen ``0`` como *updatepath* y actualicen :data:`sys.path` si lo "
 "desean. Ver `CVE-2008-5983 <https://cve.mitre.org/cgi-bin/cvename.cgi?"
-"name=CVE-2008-5983>` _."
+"name=CVE-2008-5983>`_."
 
 #: ../Doc/c-api/init.rst:656
 msgid ""
