--- a/c-api/memory.po
+++ b/c-api/memory.po
@@ -1030,12 +1030,12 @@ msgid ""
 "``*(p+j)`` exclusive; note that the treatment of negative indices differs "
 "from a Python slice):"
 msgstr ""
-"Sea *S*=``sizeof(size_t)``. Se agregan ``2*S`` bytes en cada extremo de cada "
-"bloque de *N* bytes solicitados. El diseño de la memoria es así, donde p "
-"representa la dirección retornada por una función similar a malloc o realloc "
-"(``p[i:j]`` significa el segmento de bytes de ``*(p+i)`` inclusive hasta "
-"``*(p+j)`` exclusivo; tenga en cuenta que el tratamiento de los índices "
-"negativos difiere de un segmento de Python):"
+"Sea *S* = ``sizeof(size_t)``. Se agregan ``2*S`` bytes en cada extremo de "
+"cada bloque de *N* bytes solicitados. El diseño de la memoria es así, donde "
+"p representa la dirección retornada por una función similar a malloc o "
+"realloc (``p[i:j]`` significa el segmento de bytes de ``*(p+i)`` inclusive "
+"hasta ``*(p+j)`` exclusivo; tenga en cuenta que el tratamiento de los "
+"índices negativos difiere de un segmento de Python):"
 
 #: ../Doc/c-api/memory.rst:534
 msgid "``p[-2*S:-S]``"
