--- a/c-api/objbuffer.po
+++ b/c-api/objbuffer.po
@@ -46,11 +46,10 @@ msgid ""
 "`PyArg_ParseTuple` family of functions) to get a buffer view over an object, "
 "and :c:func:`PyBuffer_Release` when the buffer view can be released."
 msgstr ""
-"Por lo tanto, se recomienda que llame :c:func:`PyObject_GetBuffer` (o "
-"``y*``o ``w*`` :ref:`format codes <arg-parsing>` con la familia de "
-"funciones :c:func:`PyArg_ParseTuple`) para obtener una vista de búfer sobre "
-"un objeto, y :c:func:`PyBuffer_Release` cuando se puede liberar la vista de "
-"búfer."
+"Por lo tanto, se recomienda que llame :c:func:`PyObject_GetBuffer` (o ``y*`` "
+"o ``w*`` :ref:`format codes <arg-parsing>` con la familia de funciones :c:"
+"func:`PyArg_ParseTuple`) para obtener una vista de búfer sobre un objeto, y :"
+"c:func:`PyBuffer_Release` cuando se puede liberar la vista de búfer."
 
 #: ../Doc/c-api/objbuffer.rst:23
 msgid ""
