--- a/distutils/apiref.po
+++ b/distutils/apiref.po
@@ -2519,7 +2519,7 @@ msgid ""
 "on the command line sets *verbose* to false."
 msgstr ""
 "las opciones booleanas pueden tener \"alias negativos\" --- p. ej. si :"
-"option:`!-quiet` es el \"alias negativo\" de :option:`!-verbose`, entonces: "
+"option:`!-quiet` es el \"alias negativo\" de :option:`!-verbose`, entonces :"
 "option:`!-quiet` en la línea de comando establece falso a *verbose*."
 
 #: ../Doc/distutils/apiref.rst:1362
@@ -2560,10 +2560,10 @@ msgid ""
 "any case. *short_option* should be ``None`` if a *long_option*  doesn't have "
 "a corresponding *short_option*. All option tuples must have long options."
 msgstr ""
-"Si una opción toma un argumento, su *long_option* debería tener `` '=' `` "
-"anexado; *short_option* debe ser solo un carácter, sin `` ':' `` en "
-"cualquier caso. *short_option* debe ser ``None`` si *long_option* no tiene "
-"una *short_option* correspondiente. Todas las tuplas de opciones deben tener "
+"Si una opción toma un argumento, su *long_option* debería tener ``'='`` "
+"anexado; *short_option* debe ser solo un carácter, sin ``':'`` en cualquier "
+"caso. *short_option* debe ser ``None`` si *long_option* no tiene una "
+"*short_option* correspondiente. Todas las tuplas de opciones deben tener "
 "opciones largas."
 
 #: ../Doc/distutils/apiref.rst:1386
