--- a/distutils/examples.po
+++ b/distutils/examples.po
@@ -368,7 +368,7 @@ msgstr ""
 "instalado en Python, el archivo :file:`PKG-INFO` es copiado junto con los "
 "módulos y paquetes de la distribución en :file:`NAME-VERSION-pyX.X.egg-"
 "info`, donde ``NAME`` es el nombre del proyecto, ``VERSION`` su versión como "
-"se define en los metadatos, y ``pyX.X` la versión mayor y menor de Python "
+"se define en los metadatos, y ``pyX.X`` la versión mayor y menor de Python "
 "como ``2.7`` o ``3.2``."
 
 #: ../Doc/distutils/examples.rst:312
