--- a/faq/extending.po
+++ b/faq/extending.po
@@ -465,8 +465,8 @@ msgid ""
 msgstr ""
 "Para cargar dinámicamente módulos de extensión g++, debes recompilar Python, "
 "hacer un nuevo *link* usando g++ (cambia LINKCC en el Python Modules "
-"Makefile) y enlaza *link* tu extensión usando g++ (por ejemplo `g++ -shared -"
-"o mymodule.so mymodule.o``)."
+"Makefile) y enlaza *link* tu extensión usando g++ (por ejemplo ``g++ -shared "
+"-o mymodule.so mymodule.o``)."
 
 #: ../Doc/faq/extending.rst:284
 msgid ""
