--- a/faq/programming.po
+++ b/faq/programming.po
@@ -90,7 +90,7 @@ msgstr ""
 "mediante PythonWin. PythonWin está disponible como parte del proyecto `Las "
 "extensiones de Python para Windows <https://sourceforge.net/ projects/"
 "pywin32/>`_ y como parte de la distribución `ActivePython <https://www."
-"activestate.com/activepython>`."
+"activestate.com/activepython>`_."
 
 #: ../Doc/faq/programming.rst:38
 #, fuzzy
@@ -412,7 +412,7 @@ msgid ""
 msgstr ""
 "Lo siguiente proporciona una lista que contiene 5 funciones lambda que "
 "calculan ``x**2``. Esperarías que, cuando se les invoca, retornaran, "
-"respectivamente, ``0``, ``1``, ``4``, ``9``y ``16``. Sin embargo, cuando lo "
+"respectivamente, ``0``, ``1``, ``4``, ``9`` y ``16``. Sin embargo, cuando lo "
 "ejecutes verás que todas devuelven ``16``::"
 
 #: ../Doc/faq/programming.rst:220
@@ -813,9 +813,9 @@ msgid ""
 "same object, using either name accesses the modified value ``[10]``."
 msgstr ""
 "Después de la invocación a :meth:`~list.append`, el contenido del objeto "
-"mutable ha cambiado de ``[]`` a``[10]``.  Ya que ambas variables referencian "
-"al mismo objeto, el usar cualquiera de los nombres accederá al valor "
-"modificado ``[10]``."
+"mutable ha cambiado de ``[]`` a ``[10]``.  Ya que ambas variables "
+"referencian al mismo objeto, el usar cualquiera de los nombres accederá al "
+"valor modificado ``[10]``."
 
 #: ../Doc/faq/programming.rst:454
 msgid "If we instead assign an immutable object to ``x``::"
@@ -1367,9 +1367,9 @@ msgstr ""
 "No uses la función incorporada :func:`eval` si todo lo que necesitas es "
 "convertir cadenas a números.  :func:`eval` será considerablemente más lento "
 "y presenta riesgos de seguridad: cualquiera podría introducir una expresión "
-"Python que presentara efectos indeseados.  Por ejemplo, alguien podría "
-"pasar``__import__('os').system(\"rm -rf $HOME\")`` lo cual borraría el "
-"directorio home al completo."
+"Python que presentara efectos indeseados.  Por ejemplo, alguien podría pasar "
+"``__import__('os').system(\"rm -rf $HOME\")`` lo cual borraría el directorio "
+"home al completo."
 
 #: ../Doc/faq/programming.rst:882
 msgid ""
@@ -2408,7 +2408,7 @@ msgstr ""
 "``c.count`` también se refiere a ``C.count`` para cualquier ``c`` de tal "
 "forma que se cumpla ``isinstance(c, C)``, a no ser que ``c`` sea "
 "sobreescrita por si misma o por alguna clase contenida en la búsqueda de "
-"clases base desde``c.__class__`` hasta ``C``."
+"clases base desde ``c.__class__`` hasta ``C``."
 
 #: ../Doc/faq/programming.rst:1612
 msgid ""
@@ -2917,7 +2917,7 @@ msgstr ""
 "Cuando se importa un módulo por primera vez (o cuando el código fuente ha "
 "cambiado desde que el fichero compilado se creó) un fichero ``.pyc`` que "
 "contiene el código compilado se debería crear en la subcarpeta "
-"``__pycache__`` del directorio que contiene al fichero``.py``.  El fichero "
+"``__pycache__`` del directorio que contiene al fichero ``.py``.  El fichero "
 "``.pyc`` tendrá un nombre que empezará con el mismo nombre que el del "
 "fichero  ``.py`` y terminará con ``.pyc``, con un componente intermedio que "
 "dependerá del binario ``python`` en particular que lo creó.  (Ver :pep:"
