--- a/howto/urllib2.po
+++ b/howto/urllib2.po
@@ -600,7 +600,7 @@ msgid ""
 "authentication.shtml>`_."
 msgstr ""
 "Para ilustrar la creación e instalación de un gestor usaremos "
-"`HTTPBasicAuthHandler``. Para una discusión más detallada de este tema -- "
+"``HTTPBasicAuthHandler``. Para una discusión más detallada de este tema -- "
 "incluyendo una explicación de cómo funciona la Autenticación Básica - ver "
 "`Basic Authentication Tutorial <http://www.voidspace.org.uk/python/articles/"
 "authentication.shtml>`_."
