--- a/install/index.po
+++ b/install/index.po
@@ -865,9 +865,9 @@ msgstr ""
 "instalación específica de la plataforma, que se utiliza para archivos "
 "específicos de la plataforma . (Actualmente, esto solo significa "
 "distribuciones de módulos no puras, pero podría expandirse a bibliotecas C, "
-"ejecutables binarios, etc.) Si:option:`!--exec-prefix` no se proporciona, el "
-"valor predeterminado es :option:`!--prefix`. Los archivos se instalan de la "
-"siguiente manera:"
+"ejecutables binarios, etc.) Si :option:`!--exec-prefix` no se proporciona, "
+"el valor predeterminado es :option:`!--prefix`. Los archivos se instalan de "
+"la siguiente manera:"
 
 #: ../Doc/install/index.rst:431 ../Doc/install/index.rst:508
 msgid "Python modules"
@@ -1369,7 +1369,7 @@ msgstr ""
 "La variable :envvar:`PYTHONPATH` se puede establecer en una lista de rutas "
 "que se agregarán al comienzo de ``sys.path``. Por ejemplo, si :envvar:"
 "`PYTHONPATH` está establecido en ``/www/python:/opt /py``, la ruta de "
-"búsqueda comenzará con ``['/www/python', '/opt/py'] ``. (Tenga en cuenta que "
+"búsqueda comenzará con ``['/www/python', '/opt/py']``. (Tenga en cuenta que "
 "los directorios deben existir para poder agregarlos a ``sys.path``; el "
 "módulo :mod:`site` elimina las rutas que no existen)."
 
