--- a/installing/index.po
+++ b/installing/index.po
@@ -347,13 +347,13 @@ msgid ""
 "``pip``::"
 msgstr ""
 "En Linux, macOS y otros sistemas POSIX, usa los comandos versionados de "
-"Python en combinación con la opción `` -m`` para ejecutar la copia apropiada "
+"Python en combinación con la opción ``-m`` para ejecutar la copia apropiada "
 "de ``pip`` ::"
 
 #: ../Doc/installing/index.rst:175
 msgid "Appropriately versioned ``pip`` commands may also be available."
 msgstr ""
-"Los comandos `` pip '' adecuadamente versionados también pueden estar "
+"Los comandos ``pip`` adecuadamente versionados también pueden estar "
 "disponibles."
 
 #: ../Doc/installing/index.rst:177
@@ -361,8 +361,8 @@ msgid ""
 "On Windows, use the ``py`` Python launcher in combination with the ``-m`` "
 "switch::"
 msgstr ""
-"En Windows, use el lanzador de Python `` py`` en combinación con el "
-"interruptor `` -m`` ::"
+"En Windows, use el lanzador de Python ``py`` en combinación con el "
+"interruptor ``-m`` ::"
 
 #: ../Doc/installing/index.rst:194
 msgid "Common installation issues"
