--- a/reference/import.po
+++ b/reference/import.po
@@ -1359,7 +1359,7 @@ msgid ""
 msgstr ""
 "Python también admite archivos de caché \"basados en hash\", que almacenan "
 "un hash del contenido del archivo de origen en lugar de sus metadatos. Hay "
-"dos variantes de archivos ``.pyc` basados en hash: marcados y desmarcados. "
+"dos variantes de archivos ``.pyc`` basados en hash: marcados y desmarcados. "
 "Para los archivos ``.pyc`` marcados basados en hash, Python valida el "
 "archivo de caché mediante el hash del archivo de origen y la comparación del "
 "hash resultante con el hash en el archivo de caché. Si se encuentra que un "
