--- a/reference/simple_stmts.po
+++ b/reference/simple_stmts.po
@@ -1184,7 +1184,7 @@ msgstr ""
 "paquete actual donde existe el módulo que realiza la importación. Dos puntos "
 "significan un nivel de paquete. Tres puntos son dos niveles, etc. Entonces, "
 "si ejecuta ``from . import mod`` de un módulo en el paquete ``pkg`` "
-"terminará importando``pkg.mod``. Si ejecuta ``from ..subpkg2 import mod`` "
+"terminará importando ``pkg.mod``. Si ejecuta ``from ..subpkg2 import mod`` "
 "desde dentro de ``pkg.subpkg1``, importará ``pkg.subpkg2.mod``. La "
 "especificación para las importaciones relativas está contenida en la "
 "sección :ref:`relativeimports`."
@@ -1447,7 +1447,7 @@ msgstr ""
 "global` contenida en una cadena u objeto de código suministrado a la función "
 "incorporada :func:`exec` no afecta el bloque de código *que contiene* la "
 "llamada a la función, y el código contenido en dicha función una cadena no "
-"se ve afectada por la declaración keyword:`!global` en el código que "
+"se ve afectada por la declaración :keyword:`!global` en el código que "
 "contiene la llamada a la función.  Lo mismo se aplica a las funciones :func:"
 "`eval` y :func:`compile`."
 
