--- a/tutorial/datastructures.po
+++ b/tutorial/datastructures.po
@@ -149,7 +149,7 @@ msgid ""
 "default ``None``. [1]_  This is a design principle for all mutable data "
 "structures in Python."
 msgstr ""
-"Quizás hayas notado que métodos como `insert``, ``remove`` o ``sort`` que "
+"Quizás hayas notado que métodos como ``insert``, ``remove`` o ``sort`` que "
 "únicamente modifican la lista no tienen impreso un valor de retorno -- "
 "retornan el valor por defecto ``None``. [1]_ Esto es un principio de diseño "
 "para todas las estructuras de datos mutables en Python."
