--- a/using/configure.po
+++ b/using/configure.po
@@ -1026,7 +1026,7 @@ msgstr "Los archivos C (``.c``) se crean como archivos objeto (``.o``)."
 #: ../Doc/using/configure.rst:607
 msgid "A static ``libpython`` library (``.a``) is created from objects files."
 msgstr ""
-"La biblioteca estática `libpython`` (``.a``) se crea a a partir de archivos "
+"La biblioteca estática ``libpython`` (``.a``) se crea a a partir de archivos "
 "de objetos."
 
 #: ../Doc/using/configure.rst:608
