--- a/using/windows.po
+++ b/using/windows.po
@@ -839,10 +839,10 @@ msgid ""
 "one from the Microsoft Store. To access the new installation, use ``python3."
 "exe`` or ``python3.x.exe``."
 msgstr ""
-"Si ha instalado otra versión de Python que se haya agregado a la "
-"variable``PATH``, estará disponible como ``python.exe`` en lugar de la de "
-"Microsoft Store. Para acceder a la nueva instalación, use ``python3.exe`` o "
-"``python3.x.exe``."
+"Si ha instalado otra versión de Python que se haya agregado a la variable "
+"``PATH``, estará disponible como ``python.exe`` en lugar de la de Microsoft "
+"Store. Para acceder a la nueva instalación, use ``python3.exe`` o ``python3."
+"x.exe``."
 
 #: ../Doc/using/windows.rst:337
 msgid ""
