--- a/whatsnew/2.0.po
+++ b/whatsnew/2.0.po
@@ -1180,10 +1180,10 @@ msgid ""
 "explicit base\"."
 msgstr ""
 "Las funciones :func:`int` y :func:`long` aceptan ahora un parámetro \"base\" "
-"opcional cuando el primer argumento es una cadena. `int('123', 10)`` retorna "
-"123, mientras que ``int('123', 16)`` retorna 291. ``int(123, 16)`` lanza una "
-"excepción :exc:`TypeError` con el mensaje \"no se puede convertir una cadena "
-"con base explícita\"."
+"opcional cuando el primer argumento es una cadena. ``int('123', 10)`` "
+"retorna 123, mientras que ``int('123', 16)`` retorna 291. ``int(123, 16)`` "
+"lanza una excepción :exc:`TypeError` con el mensaje \"no se puede convertir "
+"una cadena con base explícita\"."
 
 #: ../Doc/whatsnew/2.0.rst:616
 msgid ""
