--- a/whatsnew/2.1.po
+++ b/whatsnew/2.1.po
@@ -339,7 +339,7 @@ msgid ""
 msgstr ""
 "En Python 2.1, se añadieron comparaciones enriquecidas para dar soporte a "
 "esta necesidad. Las clases de Python pueden ahora sobrecargar "
-"individualmente cada una de las operaciones ``<``, ``<=``, ``>`, ``>=``, "
+"individualmente cada una de las operaciones ``<``, ``<=``, ``>``, ``>=``, "
 "``==`` y ``!=``. Los nuevos nombres de métodos mágicos son:"
 
 #: ../Doc/whatsnew/2.1.rst:179
@@ -758,9 +758,9 @@ msgstr ""
 "accesible a través de referencias débiles, el objeto será desasignado y las "
 "referencias débiles indicarán ahora que el objeto al que se refería ya no "
 "existe. Una referencia débil a un objeto *obj* se crea llamando ``wr = "
-"weakref.ref(obj)``El objeto al que se hace referencia se retorna llamando a "
-"la referencia débil como si fuera una función: ``wr()`` retornará el objeto "
-"referenciado, o ``None`` si el objeto ya no existe."
+"weakref.ref(obj)``. El objeto al que se hace referencia se retorna llamando "
+"a la referencia débil como si fuera una función: ``wr()`` retornará el "
+"objeto referenciado, o ``None`` si el objeto ya no existe."
 
 #: ../Doc/whatsnew/2.1.rst:382
 msgid ""
@@ -1442,10 +1442,11 @@ msgid ""
 msgstr ""
 "Al aplicar :func:`repr` a las cadenas, antes se utilizaban escapes octales "
 "para los caracteres no imprimibles; por ejemplo, una nueva línea era "
-"``'012'``Esto era un vestigio de la ascendencia de Python en C, pero hoy en "
-"día el octal tiene muy poco uso prácticoKa-Ping Yee sugirió usar escapes "
-"hexadecimales en lugar de octales, y usar los escapes ``n``, ``t``, ``r`` "
-"para los caracteres apropiados, e implementó este nuevo formato."
+"``'\\012'``. Esto era un vestigio de la ascendencia de Python en C, pero hoy "
+"en día el octal tiene muy poco uso práctico. Ka-Ping Yee sugirió usar "
+"escapes hexadecimales en lugar de octales, y usar los escapes ``\\n``, "
+"``\\t``, ``\\r`` para los caracteres apropiados, e implementó este nuevo "
+"formato."
 
 #: ../Doc/whatsnew/2.1.rst:768
 msgid ""
