--- a/whatsnew/2.2.po
+++ b/whatsnew/2.2.po
@@ -1302,7 +1302,7 @@ msgid ""
 "``//`` is always available in Python 2.2; you don't need to enable it using "
 "a ``__future__`` statement."
 msgstr ""
-"``//` está siempre disponible en Python 2.2; no es necesario habilitarlo "
+"``//`` está siempre disponible en Python 2.2; no es necesario habilitarlo "
 "mediante una sentencia ``__future__``."
 
 #: ../Doc/whatsnew/2.2.rst:750
