--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -412,7 +412,7 @@ msgid ""
 "The ``@classmethod`` is shorthand for the ``meth=classmethod(meth)`` "
 "assignment. More generally, if you have the following::"
 msgstr ""
-"El ``@classmethod``  es un atajo para `meth=classmethod(meth)``. De forma "
+"El ``@classmethod``  es un atajo para ``meth=classmethod(meth)``. De forma "
 "general si se tiene lo siguiente:"
 
 #: ../Doc/whatsnew/2.4.rst:265
@@ -1158,7 +1158,7 @@ msgstr ""
 "particular o lenguaje. Sin embargo, el módulo es cuidadoso en no cambiar el "
 "local numérico porque la implementación de Python requería que la "
 "configuración regional numérica permaneciera establecida en la configuración "
-"regional `` 'C' ' . A menudo, esto se debía a que el código utilizaba la "
+"regional ``'C'`` . A menudo, esto se debía a que el código utilizaba la "
 "función :c:func:`atof` de la biblioteca C."
 
 #: ../Doc/whatsnew/2.4.rst:744
@@ -1366,7 +1366,7 @@ msgid ""
 "reverse()``, you can now write ``L.sort(reverse=True)``."
 msgstr ""
 "Finalmente el parámetro *reverse* toma un valor de tipo booleano. Si el "
-"valor es verdadero la lista será ordenada de forma inversa. En vez de``L."
+"valor es verdadero la lista será ordenada de forma inversa. En vez de ``L."
 "sort(); L.reverse()`` ahora se puede escribir ``L.sort(reverse=True)``."
 
 #: ../Doc/whatsnew/2.4.rst:852
@@ -2463,11 +2463,11 @@ msgid ""
 msgstr ""
 "Python ahora se puede construir con perfiles adicionales para el intérprete "
 "en sí, con la intención de ayudar a las personas que desarrollan el núcleo "
-"de Python. Proporcionar: option: `! - enable-profiling` al: program:` "
-"configure` script le permitirá perfilar el intérprete con: program: `gprof`, "
-"y proporcionar el: option:`! - with-tsc` switch permite la creación de "
+"de Python. Proporcionar :option:`! - enable-profiling` al :program:"
+"`configure` script le permitirá perfilar el intérprete con :program:`gprof`, "
+"y proporcionar el :option:`! - with-tsc` switch permite la creación de "
 "perfiles utilizando el registro de contador de marcas de tiempo del Pentium. "
-"Tenga en cuenta que el conmutador: option: `! - with-tsc` tiene un nombre "
+"Tenga en cuenta que el conmutador :option:`! - with-tsc` tiene un nombre "
 "ligeramente incorrecto, porque la función de creación de perfiles también "
 "funciona en la plataforma PowerPC, aunque la arquitectura del procesador no "
 "llama a ese registro\" el registro TSC \". (Contribuido por Jeremy Hylton.)"
