--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -454,7 +454,7 @@ msgid ""
 "objects for use with this statement."
 msgstr ""
 "La sentencia ':keyword:`with`' resuelve el código que anteriormente usaría "
-"bloques `try...finally`` para garantizar que el código de limpieza se "
+"bloques ``try...finally`` para garantizar que el código de limpieza se "
 "ejecute. En esta sección, discutiré como se usará comúnmente la declaración. "
 "En la siguiente sección, examinaré los detalles de la implementación y "
 "mostraré cómo escribir objetos para usar con esta declaración."
@@ -629,7 +629,7 @@ msgid ""
 "called, but *type*, *value*, and *traceback* are all ``None``."
 msgstr ""
 "Si *BLOCK* no lanzó una excepción, el método :meth:`__exit__` continúa "
-"llamándose, pero *type*, *value* y *traceback* son todos``None``."
+"llamándose, pero *type*, *value* y *traceback* son todos ``None``."
 
 #: ../Doc/whatsnew/2.6.rst:363
 msgid ""
@@ -2744,7 +2744,7 @@ msgstr ""
 "La codificación utilizada para la entrada, la salida y el error estándar "
 "puede especificarse estableciendo la variable de entorno :envvar:"
 "`PYTHONIOENCODING` antes de ejecutar el intérprete.  El valor debe ser una "
-"cadena de la forma<encoding>```` o ``<encoding>:<errorhandler>``. La parte "
+"cadena de la forma ``<encoding>`` o ``<encoding>:<errorhandler>``. La parte "
 "*encoding* especifica el nombre de la codificación, por ejemplo ``utf-8`` o "
 "``latin-1``; la parte opcional *errorhandler* especifica qué hacer con los "
 "caracteres que no pueden ser manejados por la codificación, y debe ser una "
@@ -4330,9 +4330,9 @@ msgstr ""
 "todas las aplicaciones.  El código que utiliza :mod:`xmlrpclib` debe "
 "convertir las instancias :class:`date` y :class:`~datetime.time`. (:issue:"
 "`1330538`) El código también puede manejar fechas anteriores a 1900 "
-"(contribución de Ralf Schmitt;<i8>:issue</i8>:`2014`) y enteros de 64 bits "
-"representados mediante el uso de<i8>```` en las respuestas XML-RPC "
-"(contribución de Riku Lindblad; :issue:`2985`).</i8>"
+"(contribución de Ralf Schmitt; :issue:`2014`) y enteros de 64 bits "
+"representados mediante el uso de ``<i8>`` en las respuestas XML-RPC "
+"(contribución de Riku Lindblad; :issue:`2985`)."
 
 #: ../Doc/whatsnew/2.6.rst:2639
 msgid ""
