--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -282,7 +282,7 @@ msgstr ""
 "<-W>` (forma corta: :option:`-Wd <-W>`), o estableciendo la variable de "
 "entorno :envvar:`PYTHONWARNINGS` en ``\"default\"`` (o ``\"d\"``) antes de "
 "ejecutar Python.  El código Python también puede volver a habilitarlos "
-"llamando a ''warnings.simplefilter('default')``."
+"llamando a ``warnings.simplefilter('default')``."
 
 #: ../Doc/whatsnew/2.7.rst:165
 msgid ""
@@ -1323,8 +1323,8 @@ msgstr ""
 "Los paréntesis adicionales en las definiciones de función son ilegales en "
 "Python 3.x, lo que significa que se obtiene un error de sintaxis de ``def "
 "f((x)): pass``.  En el modo de advertencia Python3, Python 2.7 ahora "
-"advertirá sobre este uso no común. (Anotado por James Lingard; :"
-"issue:'7362'.)"
+"advertirá sobre este uso no común. (Anotado por James Lingard; :issue:"
+"`7362`.)"
 
 #: ../Doc/whatsnew/2.7.rst:894
 msgid ""
@@ -3573,7 +3573,7 @@ msgid ""
 "the true/false *xml_declaration* parameter to suppress the XML declaration."
 msgstr ""
 "También se ha mejorado la gestión de los espacios de nombres. Ahora todas "
-"las declaraciones``xmlns:<whatever>`` se emiten en el elemento raíz, y no "
+"las declaraciones ``xmlns:<whatever>`` se emiten en el elemento raíz, y no "
 "dispersas en el XML resultante.  Se puede establecer el espacio de nombres "
 "por defecto para un árbol mediante el atributo :attr:`default_namespace` y "
 "se pueden registrar nuevos prefijos con :meth:`~xml.etree.ElementTree."
