--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -3842,7 +3842,7 @@ msgid ""
 "``'mbcs'``) and the ``'surrogateescape'`` error handler on all operating "
 "systems."
 msgstr ""
-"De forma predeterminada, :mod:`tarfile` usa la codificación ``'utf-8'` en "
+"De forma predeterminada, :mod:`tarfile` usa la codificación ``'utf-8'`` en "
 "Windows (en lugar de ``'mbcs'``) y el controlador de errores "
 "``'surrogateescape'`` en todos los sistemas operativos."
 
