--- a/whatsnew/3.4.po
+++ b/whatsnew/3.4.po
@@ -2702,7 +2702,7 @@ msgid ""
 "values using the new :mod:`enum` module.  This allows meaningful names to be "
 "printed during debugging, instead of integer \"magic numbers\"."
 msgstr ""
-"Las constantes ``socket.AF_*` y ``socket.SOCK_*`` son ahora valores de "
+"Las constantes ``socket.AF_*`` y ``socket.SOCK_*`` son ahora valores de "
 "enumeración utilizando el nuevo módulo :mod:`enum`.  Esto permite imprimir "
 "nombres significativos durante la depuración, en lugar de \"números "
 "mágicos\" enteros."
@@ -4682,7 +4682,7 @@ msgstr ""
 "actual a los objetos en :data:`sys.path_hooks` para la cadena vacía. Esto "
 "hace que :data:`sys.path_importer_cache` nunca contenga ``''``, por lo que "
 "iterar a través de :data:`sys.path_importer_cache` basándose en :data:`sys."
-"path` no encontrará todas las claves. El ``archivo__` de un módulo cuando se "
+"path` no encontrará todas las claves. El ``__file__`` de un módulo cuando se "
 "importa en el directorio de trabajo actual también tendrá ahora una ruta "
 "absoluta, incluso cuando se utiliza ``-m`` con el intérprete (excepto para "
 "``__main__.__file__`` cuando un script se ha ejecutado directamente "
@@ -4840,7 +4840,7 @@ msgid ""
 "similarly to ``__kwdefaults__``.  (Contributed by Yury Selivanov in :issue:"
 "`20625`.)"
 msgstr ""
-"Los nombres de los parámetros en los dicts de ``anotaciones__` ahora se "
+"Los nombres de los parámetros en los dicts de ``__annotations__`` ahora se "
 "manipulan correctamente, de forma similar a ``__kwdefaults__``.  "
 "(Contribuido por Yury Selivanov en :issue:`20625`.)"
 
