--- a/whatsnew/3.6.po
+++ b/whatsnew/3.6.po
@@ -916,7 +916,7 @@ msgid ""
 "Raymond Hettinger <https://mail.python.org/pipermail/python-dev/2012-"
 "December/123028.html>`_.)"
 msgstr ""
-"(Contribuido por INADA Naoki en: número: `27350`. Idea `originally suggested "
+"(Contribuido por INADA Naoki en :issue:`27350`. Idea `originally suggested "
 "by Raymond Hettinger <https://mail.python.org/pipermail/python-dev/2012-"
 "December/123028.html>`_.)"
 
@@ -1078,8 +1078,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.6.rst:707
 msgid "(Contributed by Victor Stinner in :issue:`26516` and :issue:`26564`.)"
-msgstr ""
-"(Contribución de Victor Stinner en: número: `26516` y: número:` 26564`.)"
+msgstr "(Contribución de Victor Stinner en :issue:`26516` y :issue:` 26564`.)"
 
 #: ../Doc/whatsnew/3.6.rst:713
 msgid "DTrace and SystemTap probing support"
@@ -1133,8 +1132,8 @@ msgid ""
 "(Contributed by Łukasz Langa in :issue:`21590`, based on patches by Jesús "
 "Cea Avión, David Malcolm, and Nikhil Benesch.)"
 msgstr ""
-"(Contribuido por Łukasz Langa en: número: `21590`, basado en parches de "
-"Jesús Cea Avión, David Malcolm y Nikhil Benesch.)"
+"(Contribuido por Łukasz Langa en :issue:`21590`, basado en parches de Jesús "
+"Cea Avión, David Malcolm y Nikhil Benesch.)"
 
 #: ../Doc/whatsnew/3.6.rst:738
 msgid "Other Language Changes"
@@ -1162,10 +1161,10 @@ msgid ""
 "if a class sets :meth:`__iter__` to ``None``, the class is not iterable. "
 "(Contributed by Andrew Barnert and Ivan Levkivskyi in :issue:`25958`.)"
 msgstr ""
-"Ahora es posible establecer un :ref:`special method <specialnames>` en `` "
-"None`` para indicar que la operación correspondiente no está disponible. Por "
-"ejemplo, si una clase establece :meth:`__iter__` en ``None``, la clase no es "
-"iterable. (Contribuido por Andrew Barnert e Ivan Levkivskyi en: número: "
+"Ahora es posible establecer un :ref:`special method <specialnames>` en "
+"``None`` para indicar que la operación correspondiente no está disponible. "
+"Por ejemplo, si una clase establece :meth:`__iter__` en ``None``, la clase "
+"no es iterable. (Contribuido por Andrew Barnert e Ivan Levkivskyi en :issue:"
 "`25958`.)"
 
 #: ../Doc/whatsnew/3.6.rst:752
@@ -1177,7 +1176,7 @@ msgstr ""
 "Las secuencias largas de líneas de rastreo repetidas ahora se abrevian como "
 "``\"[Previous line repeated {count} more times]\"`` (consulte :ref:"
 "`whatsnew36-traceback` para ver un ejemplo). (Contribución de Emanuel Barry "
-"en: número: `26823`.)"
+"en :issue:`26823`.)"
 
 #: ../Doc/whatsnew/3.6.rst:757
 msgid ""
@@ -1189,7 +1188,7 @@ msgstr ""
 "Importar ahora lanza la nueva excepción :exc:`ModuleNotFoundError` (subclase "
 "de :exc:`ImportError`) cuando no puede encontrar un módulo. El código que "
 "actualmente busca ImportError (en try-except) seguirá funcionando. "
-"(Contribución de Eric Snow en: número: `15767`.)"
+"(Contribución de Eric Snow en :issue:`15767`.)"
 
 #: ../Doc/whatsnew/3.6.rst:762
 msgid ""
@@ -1199,8 +1198,8 @@ msgid ""
 msgstr ""
 "Los métodos de clase que se basan en ``super()`` de argumento cero ahora "
 "funcionarán correctamente cuando se llamen desde métodos de metaclase "
-"durante la creación de la clase. (Contribución de Martin Teichmann en: "
-"número: `23722`.)"
+"durante la creación de la clase. (Contribución de Martin Teichmann en :issue:"
+"`23722`.)"
 
 #: ../Doc/whatsnew/3.6.rst:768
 msgid "New Modules"
