--- a/whatsnew/3.7.po
+++ b/whatsnew/3.7.po
@@ -2966,7 +2966,7 @@ msgid ""
 msgstr ""
 "La nueva opción de la linea de comandos ``-k`` permite filtrar pruebas por "
 "una subcadena de nombre o un patrón similar a un shell de Unix. Por ejemplo, "
-"`python -m unittest -k foo`` ejecuta ``foo_tests.SomeTest.test_something``, "
+"``python -m unittest -k foo`` ejecuta ``foo_tests.SomeTest.test_something``, "
 "``bar_tests.SomeTest.test_foo``, pero no ``bar_tests.FooTest."
 "test_something``. (Contribuido por *Jonas Haag* en :issue:`32071`.)"
 
@@ -3820,8 +3820,8 @@ msgstr ""
 "del paquete de espacio de nombres. Los objetos del módulo de espacio de "
 "nombres ahora tienen un ``__file__`` que está configurado como ``None`` "
 "(previamente no configurado), y su ``__spec__.origin`` también está "
-"configurado como ``None`` (anteriormente la cadena ``”espacio de nombres”`). "
-"Ver :issue:`32305`. Además, el ``__spec__.loader`` del objeto del módulo de "
+"configurado como ``None`` (anteriormente la cadena ``\"namespace\"``). Ver :"
+"issue:`32305`. Además, el ``__spec__.loader`` del objeto del módulo de "
 "espacio de nombres se establece en el mismo valor que ``__loader__`` "
 "(anteriormente, el primero se estableció en ``None``). Ver :issue:`32303`."
 
@@ -4127,7 +4127,7 @@ msgid ""
 msgstr ""
 "Función :c:func:`PySlice_GetIndicesEx` está en desuso y se reemplaza con una "
 "macro si ``Py_LIMITED_API`` no está configurado o configurado en un valor en "
-"el rango entre ``0x03050400``y ``0x03060000`` (no incluido), o es "
+"el rango entre ``0x03050400`` y ``0x03060000`` (no incluido), o es "
 "``0x03060100`` o superior. (Contribuido por *Serhiy Storchaka* en :issue:"
 "`27867`.)"
 
@@ -4161,8 +4161,8 @@ msgid ""
 msgstr ""
 "Para una compatibilidad total con Unicode, incluso dentro de los módulos de "
 "extensión, ahora se espera que las plataformas \\*nix proporcionen al menos "
-"uno de ``C.UTF-8`` (configuración regional completa), ``C."
-"utf8``(configuración regional completa) o ``UTF-8`` (configuración regional "
+"uno de ``C.UTF-8`` (configuración regional completa), ``C.utf8`` "
+"(configuración regional completa) o ``UTF-8`` (configuración regional "
 "exclusiva de ``LC_CTYPE``) como una alternativa a la configuración regional "
 "``C`` heredada basada en ``ASCII``."
 
@@ -4682,10 +4682,10 @@ msgid ""
 msgstr ""
 "Para patrones que coinciden con cadenas vacías y no vacías, el resultado de "
 "la búsqueda de todas las coincidencias también puede cambiarse en otros "
-"casos. Por ejemplo en la cadena ``’a\\n\\n’``, el patrón ``’\\n’`` no solo "
+"casos. Por ejemplo en la cadena ``'a\\n\\n'``, el patrón ``’\\n'`` no solo "
 "coincidirá con cadenas vacías en las posiciones 2 y 3, sino también la "
-"cadena `` ‘\\ n’`` en las posiciones 2–3. Para hacer coincidir solo líneas "
-"en blanco, el patrón debe reescribirse como ``r’(?m)^[^\\S\\n]*$’``."
+"cadena ``'\\n'`` en las posiciones 2–3. Para hacer coincidir solo líneas en "
+"blanco, el patrón debe reescribirse como ``r'(?m)^[^\\S\\n]*$'``."
 
 #: ../Doc/whatsnew/3.7.rst:2356
 msgid ""
@@ -4913,7 +4913,7 @@ msgid ""
 msgstr ""
 "La función :c:func:`PySlice_GetIndicesEx` se considera insegura para "
 "secuencias de tamaño variable. Si los índices de corte no son instancias de :"
-"class:`int`, sino objetos que implementan el método meth:`!__index__`, la "
+"class:`int`, sino objetos que implementan el método :meth:`!__index__`, la "
 "secuencia se puede cambiar de tamaño después de pasar su longitud a :c:func:"
 "`!PySlice_GetIndicesEx`. Esto puede llevar a que se devuelvan índices fuera "
 "de la longitud de la secuencia. Esto puede llevar a devolver índices fuera "
