--- a/whatsnew/3.9.po
+++ b/whatsnew/3.9.po
@@ -426,7 +426,7 @@ msgid ""
 msgstr ""
 "Python ahora obtiene la ruta absoluta del nombre de archivo del script "
 "especificado en la línea de comando (por ejemplo: ``python3 script.py``): el "
-"módulo `` __file__`` attribute of the :mod:`__main__` se convirtió en una "
+"módulo ``__file__`` attribute of the :mod:`__main__` se convirtió en una "
 "ruta absoluta, en lugar de una ruta relativa. Estas rutas ahora siguen "
 "siendo válidas después de que las tramas del módulo :func:`os.chdir`. Como "
 "efecto alterno, la traza también muestra la ruta absoluta para los marcos "
@@ -1761,7 +1761,7 @@ msgid ""
 "of the ``splitlist()`` method which has more consistent and predicable "
 "behavior. (Contributed by Serhiy Storchaka in :issue:`38371`.)"
 msgstr ""
-"En desuso el `` split () `` method of :class:`_tkinter.TkappType` en favor "
+"En desuso del método ``split ()`` de :class:`_tkinter.TkappType` en favor "
 "del método ``splitlist()`` que tiene un comportamiento más consistente y "
 "predecible. (Contribuido por Serhiy Storchaka en :issue:`38371`.)"
 
