--- a/howto/regex.po
+++ b/howto/regex.po
@@ -225,7 +225,7 @@ msgstr ""
 "``'^'`` como primer carácter de la clase. Por ejemplo, ``[^5]`` coincidirá "
 "con cualquier carácter excepto con ``'5'``. Si el símbolo de intercalación "
 "aparece en otra parte de una clase de caracter, no tiene un significado "
-"especial. Por ejemplo: ``[5^] `` coincidirá con un ``'5'`` o un ``'^'``."
+"especial. Por ejemplo: ``[5^]`` coincidirá con un ``'5'`` o un ``'^'``."
 
 #: ../Doc/howto/regex.rst:103
 msgid ""
@@ -1464,7 +1464,7 @@ msgstr ""
 "``A|B`` coincidirá con cualquier cadena de caracteres que coincida con *A* o "
 "*B*. ``|`` tiene una precedencia muy baja para que funcione razonablemente "
 "cuando está alternando cadenas de varios caracteres. ``Crow|Servo`` "
-"coincidirá con `'Crow'`` o ``'Servo'``, no ``'Cro'``, un ``'w'`` o un "
+"coincidirá con ``'Crow'`` o ``'Servo'``, no ``'Cro'``, un ``'w'`` o un "
 "``'S'``, y ``'ervo'``."
 
 #: ../Doc/howto/regex.rst:702
@@ -2333,14 +2333,14 @@ msgid ""
 "but use all three variations of the replacement string. ::"
 msgstr ""
 "También hay una sintaxis para hacer referencia a grupos con nombre según lo "
-"definido por la sintaxis ``(?P<name>…)``syntax. ``\\g<name>`` usará la "
-"subcadena de caracteres que coincide con el grupo llamado ``name``, y "
-"``\\g<number>`` usa el número de grupo correspondiente. ``\\g<2>`` es "
-"equivalente a ``\\2``, pero no es ambiguo en una cadena de reemplazo como "
-"``\\g<2>0``.  (``\\20`` se interpretaría como una referencia al grupo 20, no "
-"como una referencia al grupo 2 seguido del carácter literal ``'0'``.) Las "
-"siguientes sustituciones son todas equivalentes, pero use las tres "
-"variaciones de la cadena de reemplazo. ::"
+"definido por la sintaxis ``(?P<name>…)``. ``\\g<name>`` usará la subcadena "
+"de caracteres que coincide con el grupo llamado ``name``, y ``\\g<number>`` "
+"usa el número de grupo correspondiente. ``\\g<2>`` es equivalente a ``\\2``, "
+"pero no es ambiguo en una cadena de reemplazo como ``\\g<2>0``.  (``\\20`` "
+"se interpretaría como una referencia al grupo 20, no como una referencia al "
+"grupo 2 seguido del carácter literal ``'0'``.) Las siguientes sustituciones "
+"son todas equivalentes, pero use las tres variaciones de la cadena de "
+"reemplazo. ::"
 
 #: ../Doc/howto/regex.rst:1206
 msgid ""
@@ -2558,7 +2558,7 @@ msgstr ""
 "no puede coincidir al final de la cadena de caracteres, por lo que el motor "
 "de la expresión regular tiene que retroceder carácter por carácter hasta que "
 "encuentre una coincidencia para el ``>``. La coincidencia final se extiende "
-"desde el `'<'`` en ``'<html>'`` al ``'>'`` en ``'</title>'``, que no es lo "
+"desde el ``'<'`` en ``'<html>'`` al ``'>'`` en ``'</title>'``, que no es lo "
 "que queremos."
 
 #: ../Doc/howto/regex.rst:1329
