--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -503,7 +503,7 @@ msgstr ""
 #: ../Doc/whatsnew/3.3.rst:256
 msgid "The :file:`./configure` flag ``--with-wide-unicode`` has been removed."
 msgstr ""
-"Se ha eliminado el indicador :file:'./configure' ''--with-wide-unicode''."
+"Se ha eliminado el indicador :file:`./configure` ``--with-wide-unicode``."
 
 #: ../Doc/whatsnew/3.3.rst:259
 msgid "Performance and resource usage"
@@ -562,7 +562,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.3.rst:283
 msgid ":pep:`393` - Flexible String Representation"
-msgstr "PEP:`393` - Representación flexible de cadenas de caracteres"
+msgstr ":pep:`393` - Representación flexible de cadenas de caracteres"
 
 #: ../Doc/whatsnew/3.3.rst:283
 msgid ""
@@ -611,12 +611,12 @@ msgid ""
 "Python version when a more recent version is installed)."
 msgstr ""
 "El lanzador también se puede usar explícitamente desde la línea de comando "
-"como la aplicación `` py ''. La ejecución de `` py '' sigue las mismas "
-"reglas de selección de versión que la ejecución implícita de scripts, pero "
-"se puede seleccionar una versión más específica pasando los argumentos "
-"apropiados (como `` -3 '' para solicitar Python 3 cuando Python 2 también "
-"está instalado, o `` -2.6 '' para solicitar específicamente una versión "
-"anterior de Python cuando se instala una versión más reciente)."
+"como la aplicación ``py``. La ejecución de ``py`` sigue las mismas reglas de "
+"selección de versión que la ejecución implícita de scripts, pero se puede "
+"seleccionar una versión más específica pasando los argumentos apropiados "
+"(como ``-3`` para solicitar Python 3 cuando Python 2 también está instalado, "
+"o ``-2.6`` para solicitar específicamente una versión anterior de Python "
+"cuando se instala una versión más reciente)."
 
 #: ../Doc/whatsnew/3.3.rst:309
 msgid ""
@@ -1351,7 +1351,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.3.rst:784
 msgid "(Contributed by Ezio Melotti in :issue:`12753`.)"
-msgstr "(Contribución de Ezio Melotti en :issue:'12753'.)"
+msgstr "(Contribución de Ezio Melotti en :issue:`12753`.)"
 
 #: ../Doc/whatsnew/3.3.rst:786
 msgid "Unicode database updated to UCD version 6.1.0"
@@ -1503,7 +1503,7 @@ msgid ""
 ":func:`hash`: hash randomization is enabled by default, see :meth:`object."
 "__hash__` and :envvar:`PYTHONHASHSEED`."
 msgstr ""
-":func:'hash': la aleatorización de hash está habilitada de forma "
+":func:`hash`: la aleatorización de hash está habilitada de forma "
 "predeterminada, consulte :meth:`object.__hash__`  y :envvar:`PYTHONHASHSEED`."
 
 #: ../Doc/whatsnew/3.3.rst:851
@@ -1796,8 +1796,8 @@ msgid ""
 msgstr ""
 "Los decodificadores CJK multibyte ahora se re-sincronizan más rápido. Solo "
 "ignoran el primer byte de una secuencia de *bytes* no válida. Por ejemplo, "
-"`` b '\\xff\\ n'.decode (' gb2312 ','replace') `` ahora retorna un ``\\n`` "
-"después del carácter de reemplazo."
+"``b'\\xff\\n'.decode('gb2312', 'replace')`` ahora retorna un ``\\n`` después "
+"del carácter de reemplazo."
 
 #: ../Doc/whatsnew/3.3.rst:999
 msgid "(:issue:`12016`)"
@@ -1839,7 +1839,7 @@ msgid ""
 msgstr ""
 "Adición de una nueva :class:`~collections.ChainMap` para permitir el "
 "tratamiento de un número de asignaciones como una sola unidad. (Escrito por "
-"Raymond Hettinger para :issue:'11089', publicado en :issue:'11297'.)"
+"Raymond Hettinger para :issue:`11089`, publicado en :issue:`11297`.)"
 
 #: ../Doc/whatsnew/3.3.rst:1024
 msgid ""
@@ -2380,7 +2380,7 @@ msgid ""
 msgstr ""
 "Las directivas pueden ser usadas para facilitar la generación de mensajes en "
 "el formato requerido por la aplicación. En vez de tener que recordar "
-"especificar `linesep='\\r\\n'`` en todos los lugares en donde llamas a "
+"especificar ``linesep='\\r\\n'`` en todos los lugares en donde llamas a "
 "``generator``, puedes especificarlo una sola vez cuando estableces la "
 "política usada por el ``analizador`` o el ``Mensaje``, el que tu programa "
 "utilice para crear los objetos ``Mensaje``. Por otra parte, si necesitas "
@@ -2450,8 +2450,8 @@ msgid ""
 "A callable that take a ``name`` and ``value`` and produces a custom header "
 "object."
 msgstr ""
-"Un invocable que toma un `` nombre '' y un `` valor '' y produce un objeto "
-"de encabezado personalizado."
+"Un invocable que toma un ``nombre`` y un ``valor`` y produce un objeto de "
+"encabezado personalizado."
 
 #: ../Doc/whatsnew/3.3.rst:1281
 msgid ""
@@ -2543,7 +2543,7 @@ msgid ""
 ":func:`~email.utils.format_datetime`: given a :class:`~datetime.datetime`, "
 "produce a string formatted for use in an email header."
 msgstr ""
-":func:''email.utils.format_datetime': dado un :class:'-datetime.datetime', "
+":func:`~email.utils.format_datetime`: dado un :class:`~datetime.datetime`, "
 "produce una cadena formateada para su uso en un encabezado de correo "
 "electrónico."
 
@@ -2566,11 +2566,11 @@ msgid ""
 "it into an aware :class:`~datetime.datetime` using the local :class:"
 "`~datetime.timezone`."
 msgstr ""
-":func:''email.utils.localtime': Sin argumento, retorna la hora local actual "
-"como un reconocimiento :class:''datetime.datetime' utilizando el local :"
-"class:'-datetime.timezone'.  Teniendo en cuenta :class:'-datetime.datetime', "
-"lo convierte en un :class:''datetime.datetime' con el valor local :class:'-"
-"datetime.timezone'."
+":func:`~email.utils.localtime`: Sin argumento, retorna la hora local actual "
+"como un reconocimiento :class:`~datetime.datetime` utilizando el local :"
+"class:`~datetime.timezone`.  Teniendo en cuenta :class:`~datetime.datetime`, "
+"lo convierte en un :class:`~datetime.datetime` con el valor local :class:"
+"`~datetime.timezone`."
 
 #: ../Doc/whatsnew/3.3.rst:1369
 msgid "ftplib"
@@ -3301,9 +3301,9 @@ msgid ""
 ":func:`os.symlink` now accepts (and ignores) the ``target_is_directory`` "
 "keyword argument on non-Windows platforms, to ease cross-platform support."
 msgstr ""
-":func:`os.symlink` ahora acepta (e ignora) el argumento de palabra "
-"clave``target_is_directory`` en plataformas diferentes a windows, para "
-"facilitar el soporte multiplataforma."
+":func:`os.symlink` ahora acepta (e ignora) el argumento de palabra clave "
+"``target_is_directory`` en plataformas diferentes a windows, para facilitar "
+"el soporte multiplataforma."
 
 #: ../Doc/whatsnew/3.3.rst:1706
 msgid "pdb"
@@ -3629,7 +3629,7 @@ msgid ""
 "Jauhiainen.  Substantial additional work on the patch contributed by Michele "
 "Orrù and Dan Boswell.  :issue:`8739`)"
 msgstr ""
-"Soporte inicial de `` ELHO '' de Alberto Treviño. Ampliación de tamaño por "
+"Soporte inicial de ``ELHO`` de Alberto Treviño. Ampliación de tamaño por "
 "Juhana Jauhiainen. Trabajo adicional sustancial en la revisión aportada por "
 "Michele Orrù y Dan Boswell. :issue:`8739`)"
 
@@ -4197,10 +4197,10 @@ msgstr ""
 "El módulo :mod:`webbrowser` admite más \"navegadores\": Google Chrome "
 "(llamado :program:`chrome`, :program:`chromium`, :program:`chrome-browser` "
 "or :program:`chromium-browser` dependiendo de la versión y del sistema "
-"operativo), y los lanzadores genéricos: programa: `xdg-open`, del proyecto "
+"operativo), y los lanzadores genéricos :program:`xdg-open`, del proyecto "
 "FreeDesktop.org, y :program:`gvfs-open`, el cual es el controlador URI "
-"predeterminado para GNOME3. (El primero agregado por Arnaud Calmettes en: "
-"issue:`13620`, el segundo por Matthias Klose en :issue:14493`.)"
+"predeterminado para GNOME3. (El primero agregado por Arnaud Calmettes en :"
+"issue:`13620`, el segundo por Matthias Klose en :issue:`14493`.)"
 
 #: ../Doc/whatsnew/3.3.rst:2125
 msgid "xml.etree.ElementTree"
