--- a/tutorial/controlflow.po
+++ b/tutorial/controlflow.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2022-11-19 21:11-0300\n"
+"PO-Revision-Date: 2022-11-19 22:53-0300\n"
 "Last-Translator: Carlos A. Crespo <lvccrespo@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -803,7 +803,7 @@ msgstr ""
 "recibe un diccionario (ver :ref:`typesmapping`) conteniendo todos los "
 "argumentos nombrados excepto aquellos correspondientes a un parámetro "
 "formal. Esto puede ser combinado con un parámetro formal de la forma "
-"``*nombre`` (descrito en la siguiente sección) que recibe una :ref:`tuple "
+"``*nombre`` (descrito en la siguiente sección) que recibe una :ref:`tupla "
 "<tut-tuples>` conteniendo los argumentos posicionales además de la lista de "
 "parámetros formales. (``*nombre`` debe ocurrir antes de ``**nombre``). Por "
 "ejemplo, si definimos una función así::"
