--- a/tutorial/controlflow.po
+++ b/tutorial/controlflow.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2022-11-19 22:53-0300\n"
+"PO-Revision-Date: 2022-11-19 23:09-0300\n"
 "Last-Translator: Carlos A. Crespo <lvccrespo@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -288,13 +288,13 @@ msgid ""
 "also extract components (sequence elements or object attributes) from the "
 "value into variables."
 msgstr ""
-"Una sentencia match recibe una expresión y compara su valor con patrones "
-"sucesivos dados en uno o más bloques case. Esto es similar a grandes rasgos "
-"con una sentencia switch en C, Java o JavaScript (y muchos otros lenguajes) "
-"pero es más similar a la comparación de patrones en lenguajes como Rust o "
-"Haskell. Sólo se ejecuta el primer patrón que coincide y también es capaz de "
-"extraer componentes (elementos de una secuencia o atributos de un objeto) de "
-"un valor y ponerlos en variables."
+"Una sentencia :keyword:`match` recibe una expresión y compara su valor con "
+"patrones sucesivos dados en uno o más bloques case. Esto es similar a "
+"grandes rasgos con una sentencia switch en C, Java o JavaScript (y muchos "
+"otros lenguajes) pero es más similar a la comparación de patrones en "
+"lenguajes como Rust o Haskell. Sólo se ejecuta el primer patrón que coincide "
+"y también es capaz de extraer componentes (elementos de una secuencia o "
+"atributos de un objeto) de un valor y ponerlos en variables."
 
 #: ../Doc/tutorial/controlflow.rst:261
 msgid ""
